// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for Authenticated Users. Renders landing page 1`] = `
<div>
  <div>
    <div
      className="makeStyles-page-4"
    >
      <div>
        <header
          className="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed makeStyles-appBar-34 makeStyles-info-41 makeStyles-fixed-36 MuiAppBar-colorPrimary mui-fixed MuiPaper-elevation4"
        >
          <div
            className="MuiToolbar-root MuiToolbar-regular makeStyles-container-37 MuiToolbar-gutters"
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-title-38"
              disabled={false}
              onBlur={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                <a
                  href="/"
                  onClick={[Function]}
                >
                  <img
                    alt="logo"
                    className="makeStyles-logo-33"
                    src="logo-white.png"
                  />
                </a>
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </button>
            <div
              className="makeStyles-hidden-50 PrivateHiddenCss-smDown-132"
            >
              <div
                className="makeStyles-collapse-51"
              >
                <ul
                  className="MuiList-root makeStyles-list-447 makeStyles-mlAuto-463 MuiList-padding"
                >
                  <li
                    className="MuiListItem-root makeStyles-listItem-448 MuiListItem-gutters"
                    disabled={false}
                  >
                    <a
                      className="makeStyles-navLink-450"
                      href="/"
                      onClick={[Function]}
                    >
                      My Lists
                    </a>
                  </li>
                  <li
                    className="MuiListItem-root makeStyles-listItem-448 MuiListItem-gutters"
                    disabled={false}
                  >
                    <a
                      className="makeStyles-navLink-450"
                      href="/listideas"
                      onClick={[Function]}
                    >
                      Gift List Ideas
                    </a>
                  </li>
                  <li
                    className="MuiListItem-root makeStyles-listItem-448 MuiListItem-gutters"
                    disabled={false}
                  >
                    <a
                      className="makeStyles-navLink-450"
                      href="/logout"
                      onClick={[Function]}
                    >
                      Sign Out
                    </a>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </header>
      </div>
      <div
        className="makeStyles-main-6"
      >
        <div
          className="makeStyles-section-498"
        >
          <div
            className="makeStyles-container-496"
          >
            <div
              className="MuiGrid-root makeStyles-grid-180  MuiGrid-container"
            >
              <div
                className="MuiGrid-root makeStyles-grid-284  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 MuiGrid-grid-md-12"
              >
                <h1
                  className="makeStyles-title-499"
                >
                  Your lists
                </h1>
                <br />
                <div
                  className="MuiGrid-root makeStyles-grid-180  MuiGrid-container"
                >
                  <div
                    className="MuiGrid-root makeStyles-grid-284  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-md-4"
                  >
                    <div
                      className="makeStyles-card-358 makeStyles-cardProfile-360"
                    >
                      <div
                        className="makeStyles-cardHeader-373 makeStyles-cardHeaderImage-375"
                      >
                        <a
                          href="/lists/933c7476-cf0d-4a75-8822-2c011c07ce1d"
                        >
                          <img
                            alt="..."
                            className="makeStyles-listImage-503"
                            src="/images/celebration-default.jpg"
                          />
                        </a>
                        <div
                          className="makeStyles-coloredShadow-464"
                          style={
                            Object {
                              "backgroundImage": "url(/images/celebration-default.jpg)",
                              "opacity": "1",
                            }
                          }
                        />
                      </div>
                      <div
                        className="makeStyles-cardBody-589"
                      >
                        <div
                          className="makeStyles-defaultFontStyle-385 makeStyles-infoText-392"
                        >
                          <a
                            href="/lists/933c7476-cf0d-4a75-8822-2c011c07ce1d"
                          >
                            <h6
                              className="makeStyles-cardCategory-500"
                            >
                              My Birthday List
                            </h6>
                          </a>
                        </div>
                        <p
                          className="makeStyles-cardDescription-501"
                        >
                          Birthday
                        </p>
                      </div>
                      <div
                        className="makeStyles-cardFooter-596 makeStyles-cardFooterProfile-597 makeStyles-justifyContentCenter-502"
                      >
                        <a
                          href="/lists/933c7476-cf0d-4a75-8822-2c011c07ce1d"
                        >
                          <button
                            className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-285 makeStyles-info-289 makeStyles-round-312 makeStyles-justIcon-315"
                            disabled={false}
                            onBlur={[Function]}
                            onDragLeave={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            onMouseDown={[Function]}
                            onMouseLeave={[Function]}
                            onMouseUp={[Function]}
                            onTouchEnd={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            tabIndex={0}
                            type="button"
                          >
                            <span
                              className="MuiButton-label"
                            >
                              <svg
                                aria-hidden="true"
                                className="MuiSvgIcon-root"
                                focusable="false"
                                role="presentation"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M14 17H4v2h10v-2zm6-8H4v2h16V9zM4 15h16v-2H4v2zM4 5v2h16V5H4z"
                                />
                              </svg>
                            </span>
                            <span
                              className="MuiTouchRipple-root"
                            />
                          </button>
                        </a>
                        <a
                          href="/edit/933c7476-cf0d-4a75-8822-2c011c07ce1d"
                        >
                          <button
                            className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-285 makeStyles-success-290 makeStyles-round-312 makeStyles-justIcon-315"
                            disabled={false}
                            onBlur={[Function]}
                            onDragLeave={[Function]}
                            onFocus={[Function]}
                            onKeyDown={[Function]}
                            onKeyUp={[Function]}
                            onMouseDown={[Function]}
                            onMouseLeave={[Function]}
                            onMouseUp={[Function]}
                            onTouchEnd={[Function]}
                            onTouchMove={[Function]}
                            onTouchStart={[Function]}
                            tabIndex={0}
                            type="button"
                          >
                            <span
                              className="MuiButton-label"
                            >
                              <span
                                aria-hidden={true}
                                className="material-icons MuiIcon-root"
                              >
                                mode_edit
                              </span>
                            </span>
                            <span
                              className="MuiTouchRipple-root"
                            />
                          </button>
                        </a>
                      </div>
                    </div>
                  </div>
                  <div
                    className="MuiGrid-root makeStyles-grid-284  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-md-4"
                  >
                    <div
                      className="makeStyles-addList-513"
                    >
                      <div>
                        <div>
                          <div
                            className="makeStyles-centerButton-515"
                          >
                            <button
                              className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-285 makeStyles-lg-310 makeStyles-info-289 makeStyles-round-312 makeStyles-justIcon-315"
                              disabled={false}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onDragLeave={[Function]}
                              onFocus={[Function]}
                              onKeyDown={[Function]}
                              onKeyUp={[Function]}
                              onMouseDown={[Function]}
                              onMouseLeave={[Function]}
                              onMouseUp={[Function]}
                              onTouchEnd={[Function]}
                              onTouchMove={[Function]}
                              onTouchStart={[Function]}
                              tabIndex={0}
                              type="button"
                            >
                              <span
                                className="MuiButton-label"
                              >
                                <svg
                                  aria-hidden="true"
                                  className="MuiSvgIcon-root"
                                  focusable="false"
                                  role="presentation"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M14 10H2v2h12v-2zm0-4H2v2h12V6zm4 8v-4h-2v4h-4v2h4v4h2v-4h4v-2h-4zM2 16h8v-2H2v2z"
                                  />
                                </svg>
                              </span>
                              <span
                                className="MuiTouchRipple-root"
                              />
                            </button>
                          </div>
                          <p
                            className="makeStyles-cardDescription-514"
                          >
                            Create a New List
                          </p>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="MuiGrid-root makeStyles-grid-284  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 MuiGrid-grid-md-12"
              >
                <h1
                  className="makeStyles-title-499"
                >
                  Lists Shared With You
                </h1>
                <br />
                <div
                  className="MuiGrid-root makeStyles-grid-180  MuiGrid-container"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="makeStyles-flexer-5"
      />
      <div>
        <div />
        <footer
          className="makeStyles-footer-420 makeStyles-footer-587"
        >
          <div
            className="makeStyles-container-426"
          >
             
            <div>
              <div
                className="makeStyles-left-584"
              >
                <ul
                  className="MuiList-root makeStyles-list-583 MuiList-padding"
                >
                  <li
                    className="MuiListItem-root makeStyles-inlineBlock-582 MuiListItem-gutters"
                    disabled={false}
                  >
                    <a
                      className="makeStyles-block-581"
                      href="/"
                    >
                      © 
                      2020
                       ewelists
                    </a>
                  </li>
                  <li
                    className="MuiListItem-root makeStyles-inlineBlock-582 MuiListItem-gutters"
                    disabled={false}
                  >
                    <a
                      className="makeStyles-block-581"
                      href="/contact"
                    >
                      Contact Us
                    </a>
                  </li>
                  <li
                    className="MuiListItem-root makeStyles-inlineBlock-582 MuiListItem-gutters"
                    disabled={false}
                  >
                    <a
                      className="makeStyles-block-581"
                      href="/#about"
                    >
                      About us
                    </a>
                  </li>
                  <li
                    className="MuiListItem-root makeStyles-inlineBlock-582 MuiListItem-gutters"
                    disabled={false}
                  >
                    <a
                      className="makeStyles-block-581"
                      href="/privacy"
                    >
                      Privacy
                    </a>
                  </li>
                  <li
                    className="MuiListItem-root makeStyles-inlineBlock-582 MuiListItem-gutters"
                    disabled={false}
                  >
                    <a
                      className="makeStyles-block-581"
                      href="/terms"
                    >
                      Terms
                    </a>
                  </li>
                </ul>
              </div>
              <div
                className="makeStyles-rightLinks-588"
              >
                <ul>
                  <li>
                    <a
                      aria-disabled={false}
                      className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-285 makeStyles-facebook-296 makeStyles-simple-307 makeStyles-justIcon-315"
                      href="https://www.facebook.com/ewelists"
                      onBlur={[Function]}
                      onDragLeave={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      tabIndex={0}
                      target="_blank"
                    >
                      <span
                        className="MuiButton-label"
                      >
                        <i
                          className="fab fa-facebook"
                        />
                      </span>
                      <span
                        className="MuiTouchRipple-root"
                      />
                    </a>
                  </li>
                  <li>
                    <a
                      aria-disabled={false}
                      className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-285 makeStyles-twitter-295 makeStyles-simple-307 makeStyles-justIcon-315"
                      href="https://twitter.com/ewelists"
                      onBlur={[Function]}
                      onDragLeave={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      tabIndex={0}
                      target="_blank"
                    >
                      <span
                        className="MuiButton-label"
                      >
                        <i
                          className="fab fa-twitter"
                        />
                      </span>
                      <span
                        className="MuiTouchRipple-root"
                      />
                    </a>
                  </li>
                  <li>
                    <a
                      aria-disabled={false}
                      className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-285 makeStyles-instagram-306 makeStyles-simple-307 makeStyles-justIcon-315"
                      href="https://www.instagram.com/ewelists/"
                      onBlur={[Function]}
                      onDragLeave={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyUp={[Function]}
                      onMouseDown={[Function]}
                      onMouseLeave={[Function]}
                      onMouseUp={[Function]}
                      onTouchEnd={[Function]}
                      onTouchMove={[Function]}
                      onTouchStart={[Function]}
                      tabIndex={0}
                      target="_blank"
                    >
                      <span
                        className="MuiButton-label"
                      >
                        <i
                          className="fab fa-instagram"
                        />
                      </span>
                      <span
                        className="MuiTouchRipple-root"
                      />
                    </a>
                  </li>
                </ul>
              </div>
            </div>
            <div
              className="makeStyles-clearFix-436"
            />
          </div>
        </footer>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tests for Non Authenticated Users. Renders Landing Page 1`] = `
<div>
  <div>
    <div>
      <header
        className="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed makeStyles-appBar-34 makeStyles-info-41 makeStyles-fixed-36 MuiAppBar-colorPrimary mui-fixed MuiPaper-elevation4"
      >
        <div
          className="MuiToolbar-root MuiToolbar-regular makeStyles-container-37 MuiToolbar-gutters"
        >
          <button
            className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-title-38"
            disabled={false}
            onBlur={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              <a
                href="/"
                onClick={[Function]}
              >
                <img
                  alt="logo"
                  className="makeStyles-logo-33"
                  src="logo-white.png"
                />
              </a>
            </span>
            <span
              className="MuiTouchRipple-root"
            />
          </button>
          <div
            className="makeStyles-hidden-50 PrivateHiddenCss-smDown-132"
          >
            <div
              className="makeStyles-collapse-51"
            >
              <ul
                className="MuiList-root makeStyles-list-142 makeStyles-mlAuto-158 MuiList-padding"
              >
                <li
                  className="MuiListItem-root makeStyles-listItem-143 MuiListItem-gutters"
                  disabled={false}
                >
                  <a
                    className="makeStyles-navLink-145"
                    href="/listideas"
                    onClick={[Function]}
                  >
                    Gift List Ideas
                  </a>
                </li>
                <li
                  className="MuiListItem-root makeStyles-listItem-143 MuiListItem-gutters"
                  disabled={false}
                >
                  <a
                    className="makeStyles-navLink-145"
                    href="/login"
                    onClick={[Function]}
                  >
                    Log In
                  </a>
                </li>
                <li
                  className="MuiListItem-root makeStyles-listItem-143 MuiListItem-gutters"
                  disabled={false}
                >
                  <a
                    className="makeStyles-navLink-145"
                    href="/signup"
                    onClick={[Function]}
                  >
                    Sign Up
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </header>
    </div>
    <div
      className="makeStyles-main-6"
    >
      <div
        className="makeStyles-section-176"
      >
        <div
          className="makeStyles-container-174"
        >
          <div
            className="MuiGrid-root makeStyles-grid-180  MuiGrid-container"
          >
            <div
              className="MuiGrid-root makeStyles-grid-284  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-6"
            >
              <h1
                className="makeStyles-title-177"
              >
                Create your Baby Gift List
              </h1>
              <h4
                className="makeStyles-description-175"
              >
                Ewelists helps new and expecting parents get the gifts they need for their new arrival. Create a gift list, which you can share with friends and family, for free.
              </h4>
              <br />
              <a
                aria-disabled={false}
                className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-285 makeStyles-lg-310 makeStyles-danger-292"
                href="/signup"
                onBlur={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                tabIndex={0}
                target="_blank"
              >
                <span
                  className="MuiButton-label"
                >
                  Create Your List - It's Free!
                </span>
                <span
                  className="MuiTouchRipple-root"
                />
              </a>
            </div>
            <div
              className="MuiGrid-root makeStyles-grid-284  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-md-6"
            >
              <div
                className="makeStyles-sheepContainer-178"
              >
                <img
                  alt="..."
                  src="sheep-toy1.jpg"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="makeStyles-section-318 makeStyles-sectionGray-319"
      >
        <div
          className="makeStyles-container-317"
        >
          <div
            className="MuiGrid-root makeStyles-grid-180  MuiGrid-container MuiGrid-justify-xs-center"
          >
            <div
              className="MuiGrid-root makeStyles-grid-284  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 MuiGrid-grid-md-8"
            >
              <h2
                className="makeStyles-title-320"
              >
                Get organised with Ewelists
              </h2>
              <h5
                className="makeStyles-description-321"
              >
                Create your first Ewelist with the things you know you want, or just the essentials.
              </h5>
            </div>
          </div>
          <div>
            <div
              className="MuiGrid-root makeStyles-grid-180  MuiGrid-container"
            >
              <div
                className="MuiGrid-root makeStyles-grid-284  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-md-4"
              >
                <div
                  className="makeStyles-infoArea-323 makeStyles-infoArea-322"
                >
                  <div
                    className="makeStyles-iconWrapper-324 makeStyles-primary-325 makeStyles-iconWrapperVertical-336"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root makeStyles-icon-332 makeStyles-iconVertical-337"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 5.9c1.16 0 2.1.94 2.1 2.1s-.94 2.1-2.1 2.1S9.9 9.16 9.9 8s.94-2.1 2.1-2.1m0 9c2.97 0 6.1 1.46 6.1 2.1v1.1H5.9V17c0-.64 3.13-2.1 6.1-2.1M12 4C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z"
                      />
                    </svg>
                  </div>
                  <div
                    className="makeStyles-descriptionWrapper-333"
                  >
                    <h4
                      className="makeStyles-title-334"
                    >
                      Sign Up
                    </h4>
                    <div
                      className="makeStyles-description-335"
                    >
                      Sign up using one of your social accounts, or alternatively just an email, to create your first list.
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="MuiGrid-root makeStyles-grid-284  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-md-4"
              >
                <div
                  className="makeStyles-infoArea-323 makeStyles-infoArea-322"
                >
                  <div
                    className="makeStyles-iconWrapper-324 makeStyles-rose-330 makeStyles-iconWrapperVertical-336"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root makeStyles-icon-332 makeStyles-iconVertical-337"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3 13h2v-2H3v2zm0 4h2v-2H3v2zm0-8h2V7H3v2zm4 4h14v-2H7v2zm0 4h14v-2H7v2zM7 7v2h14V7H7z"
                      />
                    </svg>
                  </div>
                  <div
                    className="makeStyles-descriptionWrapper-333"
                  >
                    <h4
                      className="makeStyles-title-334"
                    >
                      Add Items
                    </h4>
                    <div
                      className="makeStyles-description-335"
                    >
                      Add items by copying the link to the product, or alternatively use one of our ready made lists if you're looking for inspiration.
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="MuiGrid-root makeStyles-grid-284  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-md-4"
              >
                <div
                  className="makeStyles-infoArea-323 makeStyles-infoArea-322"
                >
                  <div
                    className="makeStyles-iconWrapper-324 makeStyles-info-329 makeStyles-iconWrapperVertical-336"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root makeStyles-icon-332 makeStyles-iconVertical-337"
                      focusable="false"
                      role="presentation"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
                      />
                    </svg>
                  </div>
                  <div
                    className="makeStyles-descriptionWrapper-333"
                  >
                    <h4
                      className="makeStyles-title-334"
                    >
                      Share
                    </h4>
                    <div
                      className="makeStyles-description-335"
                    >
                      Share your first ewelist with friends and family.
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="makeStyles-section-348"
      >
        <div
          className="makeStyles-container-347"
        >
          <div
            className="makeStyles-section-351"
          >
            <div
              className="MuiGrid-root makeStyles-grid-180  MuiGrid-container"
            >
              <div
                className="MuiGrid-root makeStyles-grid-284 makeStyles-mlAuto-349 makeStyles-mrAuto-350 MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-10 MuiGrid-grid-md-10"
              >
                <div>
                  <div
                    className="makeStyles-card-358 makeStyles-cardPlain-359 makeStyles-cardBlog-361"
                  >
                    <div
                      className="MuiGrid-root makeStyles-grid-180  MuiGrid-container"
                    >
                      <div
                        className="MuiGrid-root makeStyles-grid-284  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 MuiGrid-grid-md-5"
                      >
                        <div
                          className="makeStyles-cardHeader-373 makeStyles-cardHeaderPlain-374 makeStyles-cardHeaderImage-375"
                        >
                          <a
                            href="/listideas/christmasfortoddlers"
                          >
                            <img
                              alt="..."
                              className="makeStyles-leftImage-355"
                              src="christmastoddlers.jpg"
                            />
                          </a>
                          <div
                            style={
                              Object {
                                "backgroundImage": "url(christmastoddlers.jpg)",
                                "opacity": "1",
                              }
                            }
                          />
                        </div>
                      </div>
                      <div
                        className="MuiGrid-root makeStyles-grid-284  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-7 MuiGrid-grid-md-7"
                      >
                        <div
                          className="makeStyles-defaultFontStyle-385 makeStyles-infoText-392"
                        >
                          <h6
                            className="makeStyles-cardCategory-353"
                          >
                            <a
                              href="/listideas/christmasfortoddlers"
                            >
                              Christmas Ideas for Toddlers
                            </a>
                          </h6>
                        </div>
                        <h3
                          className="makeStyles-cardTitle-352"
                        >
                          <a
                            href="/listideas/christmasfortoddlers"
                          >
                            Great Christmas ideas for toddlers and young children
                          </a>
                        </h3>
                        <p
                          className="makeStyles-description1-354"
                        >
                          If you are stuck wondering what to get a toddler for Christmas, here are some of our favourite ideas! Toddlers love to mimic adults and join in ‘helping’ with every day tasks. Here are some great ideas to encourage role play...
                          <a
                            href="/listideas/christmasfortoddlers"
                          >
                             
                            Read More
                             
                          </a>
                        </p>
                      </div>
                      <div
                        className="MuiGrid-root makeStyles-grid-284  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 MuiGrid-grid-md-5"
                      >
                        <div
                          className="makeStyles-cardHeader-373 makeStyles-cardHeaderPlain-374 makeStyles-cardHeaderImage-375"
                        >
                          <a
                            href="/listideas/christmasfortoddlers"
                          >
                            <img
                              alt="..."
                              className="makeStyles-leftImageMobile-356"
                              src="christmastoddlers.jpg"
                            />
                          </a>
                          <div
                            style={
                              Object {
                                "backgroundImage": "url(christmastoddlers.jpg)",
                                "opacity": "1",
                              }
                            }
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div>
                  <div
                    className="makeStyles-card-358 makeStyles-cardPlain-359 makeStyles-cardBlog-361"
                  >
                    <div
                      className="MuiGrid-root makeStyles-grid-180  MuiGrid-container"
                    >
                      <div
                        className="MuiGrid-root makeStyles-grid-284  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-7 MuiGrid-grid-md-7"
                      >
                        <div
                          className="makeStyles-defaultFontStyle-398 makeStyles-dangerText-408"
                        >
                          <h6
                            className="makeStyles-cardCategory-353"
                          >
                            <a
                              href="/listideas/nursery"
                            >
                              Nursery List
                            </a>
                          </h6>
                        </div>
                        <h3
                          className="makeStyles-cardTitle-352"
                        >
                          <a
                            href="/listideas/nursery"
                          >
                            All the items you need for your baby’s bedroom
                          </a>
                        </h3>
                        <p
                          className="makeStyles-description1-354"
                        >
                          Have you been gushing over the possibilities for the cute little nursery or area you want to create for your baby. The nesting phase is such a special time in the lead up to the arrival of your baby and choosing how to decorate your nursery can bring immense joy...
                          <a
                            href="/listideas/nursery"
                          >
                             
                            Read More
                             
                          </a>
                        </p>
                      </div>
                      <div
                        className="MuiGrid-root makeStyles-grid-284  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-5 MuiGrid-grid-md-5"
                      >
                        <div
                          className="makeStyles-cardHeader-373 makeStyles-cardHeaderPlain-374 makeStyles-cardHeaderImage-375"
                        >
                          <a
                            href="/listideas/nursery"
                          >
                            <img
                              alt="..."
                              className="makeStyles-rightImage-357"
                              src="nurserylist.jpg"
                            />
                          </a>
                          <div
                            style={
                              Object {
                                "backgroundImage": "url(nurserylist.jpg)",
                                "opacity": "1",
                              }
                            }
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <footer
        className="makeStyles-footer-420 makeStyles-dark-424 makeStyles-big-421"
      >
        <div
          className="makeStyles-container-426"
        >
          <div>
            <div
              className="makeStyles-content-422"
            >
              <div
                className="MuiGrid-root makeStyles-grid-180  MuiGrid-container"
              >
                <div
                  className="MuiGrid-root makeStyles-grid-284  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8 MuiGrid-grid-md-8"
                >
                  <h4
                    id="about"
                  >
                    About Us
                  </h4>
                  <p>
                    Ewelists is an online gift list tool, focused on helping new and expectant parents. Our goal is simple, to make creating a gift list for your little one's special occasion, such as baby shower, first birthday or Christmas faster and easier.
                     
                  </p>
                  <p>
                    We started by building the tool we would want to use, but would also love to hear your ideas. If you have any suggestions please contact us!
                     
                  </p>
                </div>
                <div
                  className="MuiGrid-root makeStyles-grid-284  MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4 MuiGrid-grid-md-4"
                >
                  <h4>
                    Follow Us
                  </h4>
                  <ul
                    className="makeStyles-socialButtons-416"
                  >
                    <li>
                      <a
                        aria-disabled={false}
                        className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-285 makeStyles-facebook-296 makeStyles-simple-307 makeStyles-justIcon-315"
                        href="https://www.facebook.com/ewelists"
                        onBlur={[Function]}
                        onDragLeave={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        tabIndex={0}
                        target="_blank"
                      >
                        <span
                          className="MuiButton-label"
                        >
                          <i
                            className="fab fa-facebook-square"
                          />
                        </span>
                        <span
                          className="MuiTouchRipple-root"
                        />
                      </a>
                    </li>
                    <li>
                      <a
                        aria-disabled={false}
                        className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-285 makeStyles-twitter-295 makeStyles-simple-307 makeStyles-justIcon-315"
                        href="https://twitter.com/ewelists"
                        onBlur={[Function]}
                        onDragLeave={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        tabIndex={0}
                        target="_blank"
                      >
                        <span
                          className="MuiButton-label"
                        >
                          <i
                            className="fab fa-twitter"
                          />
                        </span>
                        <span
                          className="MuiTouchRipple-root"
                        />
                      </a>
                    </li>
                    <li>
                      <a
                        aria-disabled={false}
                        className="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-button-285 makeStyles-instagram-306 makeStyles-simple-307 makeStyles-justIcon-315"
                        href="https://www.instagram.com/ewelists/"
                        onBlur={[Function]}
                        onDragLeave={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        tabIndex={0}
                        target="_blank"
                      >
                        <span
                          className="MuiButton-label"
                        >
                          <i
                            className="fab fa-instagram"
                          />
                        </span>
                        <span
                          className="MuiTouchRipple-root"
                        />
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
            <hr />
          </div>
          <div>
            <div
              className="makeStyles-left-414"
            >
              <ul
                className="MuiList-root makeStyles-list-413 MuiList-padding"
              >
                <li
                  className="MuiListItem-root makeStyles-inlineBlock-412 MuiListItem-gutters"
                  disabled={false}
                >
                  <a
                    className="makeStyles-block-411"
                    href="/contact"
                  >
                    Contact Us
                  </a>
                </li>
                <li
                  className="MuiListItem-root makeStyles-inlineBlock-412 MuiListItem-gutters"
                  disabled={false}
                >
                  <a
                    className="makeStyles-block-411"
                    href="/#about"
                  >
                    About us
                  </a>
                </li>
                <li
                  className="MuiListItem-root makeStyles-inlineBlock-412 MuiListItem-gutters"
                  disabled={false}
                >
                  <a
                    className="makeStyles-block-411"
                    href="/privacy"
                  >
                    Privacy
                  </a>
                </li>
                <li
                  className="MuiListItem-root makeStyles-inlineBlock-412 MuiListItem-gutters"
                  disabled={false}
                >
                  <a
                    className="makeStyles-block-411"
                    href="/terms"
                  >
                    Terms
                  </a>
                </li>
              </ul>
            </div>
            <div
              className="makeStyles-right-415"
            >
              © 
              2020
               ewelists
            </div>
          </div>
          <div
            className="makeStyles-clearFix-436"
          />
        </div>
      </footer>
    </div>
  </div>
</div>
`;
